build(docker): add production Dockerfile for Render deployment